--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="DESCRIPTION">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>TITLE</title>
+        <title>DavidDoesDev</title>
     </head>
     <body>
         👋 Hi There
